--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.8"
   },
   "devDependencies": {
     "@types/node": "^13.1.8",
