--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.8.9",
     "node-fetch": "^2.6.0",
     "pug": "^2.0.4",
     "request": "^2.88.0",
